--- a/ChangeLog
+++ b/ChangeLog
@@ -18,7 +18,7 @@ Release date: TBA
 
 What's New in Pylint 2.13.9?
 ============================
-Release date: TBA
+Release date: 2022-05-09
 
 
 * Fix false positives for ``no-name-in-module`` and ``import-error`` for ``numpy.distutils`` and ``pydantic``.
